infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: requiem
  labels:
    name: requiem
